@startuml
hide circle
skinparam classAttributeIconSize 0

package "UI Component" as UI_PKG {
  class Ui
}

package "Model Component" as MODEL_PKG {
  class ExpenseManager
}

package "Logic Component" as LOGIC_PKG {
  class Main {
    - ui : Ui
    - expenseManager : ExpenseManager
    - parser : Parser
    --
    + run() : void
    + {static} main(args : String[]) : void
  }

  class Parser {
    --
    + parse(userInput : String) : Command
  }

  class ArgumentParser {
    - input : String
    --
    + getValue(prefix : String) : String
    + getOptionalValue(prefix : String) : String
  }

  class InputValidator {
    --
    + {static} validateAmount(amountStr : String, commandName : String) : double
    + {static} validateDescription(description : String, commandName : String) : String
    + {static} validateCategory(category : String, commandName : String) : String
    + {static} validateIndex(input : String, commandName : String) : int
  }

  abstract class Command {
    --
    + {abstract} execute(expenseManager : ExpenseManager, ui : Ui) : void
    + isExit() : boolean
  }

  class InvalidCommand extends Command {
    - exception : OrCashBuddyException
    --
    + execute(expenseManager : ExpenseManager, ui : Ui) : void
  }

  package "Errors & Exceptions" as ERR_PKG {
    class OrCashBuddyException {
      --
      + OrCashBuddyException(message : String)
      + OrCashBuddyException(message : String, cause : Throwable)
    }

    class Exception <<external>> { }
  }
}

' Main relationships
Main --> Parser : uses
Main --> Ui : uses
Main ..> ExpenseManager : uses
Main ..> Command : executes

' Parser relationships
Parser ..> Command : creates
Parser ..> ArgumentParser : uses
Parser ..> InputValidator : uses
Parser ..> OrCashBuddyException : throws

' Helper class relationships
ArgumentParser ..> OrCashBuddyException : throws
InputValidator ..> OrCashBuddyException : throws

' Command relationships
Command ..> ExpenseManager : modifies
Command ..> Ui : uses
InvalidCommand ..> OrCashBuddyException : wraps

' Exception hierarchy
OrCashBuddyException --|> Exception

note right of Main
  Entry point with main loop:
  reads input → parses → executes → saves
end note

note right of Parser
  Parses user input into Command objects
  using ArgumentParser and InputValidator
end note

note bottom of Command
  Abstract base for all commands.
  Concrete commands: Add, Delete, Edit,
  Mark, Unmark, Find, Sort, List,
  SetBudget, Help, Bye, Invalid
end note

' Keep error types close together and out of main traffic
ERR_PKG -[hidden]down- LOGIC_PKG
MODEL_PKG -[hidden]up- UI_PKG

@enduml
